--- a/impls/ts2/package.json
+++ b/impls/ts2/package.json
@@ -11,6 +11,6 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^17.0.31",
-    "typescript": "^4.6.4"
+    "typescript": "4.7"
   }
 }
