--- a/Makefile.impls
+++ b/Makefile.impls
@@ -197,4 +197,4 @@ wren_STEP_TO_PROG =          impls/wren/$($(1)).wren
 yorick_STEP_TO_PROG =        impls/yorick/$($(1)).i
 xslt_STEP_TO_PROG =          impls/xslt/$($(1))
 zig_STEP_TO_PROG =           impls/zig/$($(1))
-ts2_$STEP_TO_PROG =          impls/ts2/$($(1)).js
+ts2_$STEP_TO_PROG =          impls/ts2/$($(1)).mjs
